--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,10 +12,6 @@
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="actionMenuTextColor">@android:color/white</item>
         <item name="android:textColor">@color/text</item>
-
-        <item name="android:timePickerDialogTheme">@style/AlertDialogCustom</item>
-        <item name="android:datePickerDialogTheme">@style/AlertDialogCustom</item>
-        <item name="android:alertDialogTheme">@style/AlertDialogCustom</item>
     </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
@@ -23,9 +19,9 @@
         <item name="color">@android:color/white</item>
     </style>
 
-    <style name="AlertDialogCustom" parent="android:Theme.Material.Light.Dialog.Alert">
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:colorPrimary">@color/text</item>
-        <item name="android:colorAccent">@color/text</item>
+        <item name="android:colorAccent">?attr/colorAccent</item>
     </style>
 
 </resources>
