--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        android:id="@+id/drawer_layout"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent">
     <!-- The main content view -->
     <FrameLayout
         android:id="@+id/content_frame"
@@ -37,14 +38,17 @@
 
     </FrameLayout>
 
-    <!-- The navigation drawer -->
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#fff"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+        android:layout_gravity="start|left"
+        android:background="@color/google_white"
+        android:fitsSystemWindows="true"
+        android:theme="@style/NavDrawerItem"
+        app:itemTextColor="@color/text"
+        app:insetForeground="@color/text"
+        app:itemIconTint="@color/text"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/menu_drawer" />
 </android.support.v4.widget.DrawerLayout>
